# tfeeling-CLI

./: Cargo.toml  README.md  sylvie.sh
.github/workflows/: release.yml
modules/: dialogues.json  dialogues.sh  engine.py
src/: engine.rs  main.rs  ui.rs  update.rs
