[package]
name = "tfeeling-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.5"
